--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="styles.css">
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <!-- FONT AWSEOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -39,7 +43,7 @@
             <!-- JS inserts here -->
             <div class="result-card-container">
                 <img src="#" class="poster">
-                <h2>Title of movie goes here</h2>
+                <h2>Blade Runner Black Out 2022</h2>
                 <i class="fa-solid fa-star"></i>
                 <p class="imdb-rating" aria-label="imdb rating">8.1</p>
                 <p class="runtime" aria-label="runtime">164 min</p>
