updated search css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input
                         type="search"
-                        class="mySearch"
+                        class="my-search"
                         name="q"
                         placeholder="Search the database..."
                         aria-label="Search through the movie database"
