added search call on click

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         aria-label="Search through the movie database"
                         pattern="[a-zA-Z0-9]+"
                         required>
-                    <button class="search-button">Search</button>
+                    <button class="search-button" id="search-button">Search</button>
                 </div>
             </form>
         </div>
