added a search based on imdbIDs from the search

--- a/index.html
+++ b/index.html
@@ -42,23 +42,8 @@
         </div>
     </header>
     <main>
-        <section class="search-results-container">
+        <section class="search-results-container" id="search-results-container">
             <!-- JS inserts here -->
-            <div class="result-card-container">
-                <img src="#" class="poster" alt="A poster for the movie ${}">
-                <h2>Blade Runner Black Out 2022</h2>
-                <i class="fa-solid fa-star"></i>
-                <p class="imdb-rating" aria-label="imdb rating">8.1</p>
-                <p class="runtime" aria-label="runtime">164 min</p>
-                <p class="genre" aria-label="genre">Action, Drama, Mystery</p>
-                <div class="add-button">
-                    <i class="fa-solid fa-circle-plus"></i>   
-                    <p>Watchlist</p>               
-                </div>
-                <p class="plot-container" id="plot-container">
-                    Plot text goes here and i want the text to be reeeeaaaaalllllyyyyyy long so i can test what it looks like when there is too much text on the screen at anyone time.
-                </p>
-            </div>
         </section>
     </main>
     <script src="index.js"></script>
