--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body id="index">
     <header>
         <div class="hero-container">
             <h1>Find your film</h1>
-            <a href="#" class="watchlist-link">My Watchlist</a>
+            <a href="watchlist.html" class="watchlist-link">My Watchlist</a>
             <form>
                 <div class="search-container">
                     <label for="my-search"><i class="fa-solid fa-magnifying-glass"></i></label>
