added watchlist func

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="hero-container">
             <h1>Find your film</h1>
-            <a href="watchlist.html" class="watchlist-link">My Watchlist</a>
+            <a href="watchlist.html" class="watchlist-link" id="watchlist-link">My Watchlist</a>
             <form>
                 <div class="search-container">
                     <label for="my-search"><i class="fa-solid fa-magnifying-glass"></i></label>
