--- a/watchlist.html
+++ b/watchlist.html
@@ -42,19 +42,10 @@
         </div>
     </header>
     <main>
-        <section class="search-results-container" id="search-results-container">
-            <div class="empty-watchlist-state">
-                <p>Your watchlist is looking a little empty...</p>
-                <div class="go-find-button">
-                    <a href="index.html">
-                        <i class="fa-solid fa-circle-plus"></i>   
-                        <p>Let's add some movies!</p>
-                    </a>                                   
-                </div>
-            </div>
+        <section class="watchlist-container" id="watchlist-container">
         </section>
     </main>
-    <script src="index.js"></script>
+    <script src="watchlist.js"></script>
 </body>
 
 </html>
