--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Movie Watchlist" content="A simple movie watchlist site that helps you track and organize the movies you want to watch. Easily add titles to your list, mark them as watched, and keep everything in one convenient place.">
     <meta name="keywords" content="Movie Watchlist, Track Movies, Organize Movies, Movie List, Watchlist Tracker, Movie Planner, Film Watchlist, Simple Movie Tracker, Manage Movies, To-Watch List">
     <meta name="author" content="Dean Burrows">
-    <title>Find your film | Dean Burrows</title>
+    <title>Find your film</title>
 
     <link rel="stylesheet" href="styles.css">
 
