--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
             <a href="watchlist.html" class="watchlist-link" id="watchlist-link">My Watchlist</a>
             <form>
                 <div class="search-container">
-                    <label for="my-search"><i class="fa-solid fa-magnifying-glass"></i></label>
-                    <input
-                        type="search"
-                        class="my-search"
-                        id="my-search"
-                        name="q"
-                        placeholder="Search the database..."
-                        aria-label="Search through the movie database"
-                        pattern="[a-zA-Z0-9]+"
-                        required>
+                        <label for="my-search"><i class="fa-solid fa-magnifying-glass"></i></label>
+                        <input
+                            type="search"
+                            class="my-search"
+                            id="my-search"
+                            name="q"
+                            placeholder="Search the database..."
+                            aria-label="Search through the movie database"
+                            pattern="[a-zA-Z0-9]+"
+                            required>
+                    </div>
                     <button class="search-button" id="search-button">Search</button>
                 </div>
             </form>
